argocd/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/hsts: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
      host: argocd.dev
  tls:
    - hosts:
        - argocd.dev
      secretName: argocd-secret # do not change, this is provided by Argo CD
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
      host: grpc.argocd.dev
  tls:
    - hosts:
        - grpc.argocd.dev
      secretName: argocd-secret # do not change, this is provided by Argo CD
